--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -14,7 +14,7 @@
   &:hover,
   &:focus {
     background-color: var(--primary-color-hover);
-    box-shadow: 0 0 0 0;
+    box-shadow: 0 0 0 0 rgb(43 167 237 / 30%);
   }
 }
 
