--- a/src/scss/pages/_services.scss
+++ b/src/scss/pages/_services.scss
@@ -85,7 +85,7 @@
         @include breakpoint('medium') {
           padding: 2.5625rem 1.3125rem 3.6875rem 1.75rem;
           box-shadow: 0px 5px 32px -9px rgba(0, 0, 0, 0.2);
-          background-color: var(--white-color);
+          background-color: var(--secondary-color-alt);
           @include border-radius('10');
         }
 
