--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -5,8 +5,8 @@
   bottom: 0;
   z-index: map-get($z-index, 'header');
   width: 100%;
-  background-color: var(--white-color);
-  transition: box-shadow 300ms ease-out;
+  background-color: var(--neutral-color);
+  transition: box-shadow 300ms ease-out, background-color 300ms ease-in;
 
   &.scroll {
     box-shadow: 0 -6px 10px -10px rgb(0 0 0 / 25%);
@@ -173,7 +173,7 @@
       border-radius: 1.5625rem 1.5625rem 0 0;
       box-shadow: 0px -4px 10px -5px rgba(0, 0, 0, 0.25);
       padding: 2.75rem 2.375rem 4.75rem 2.4375rem;
-      background-color: var(--white-color);
+      background-color: var(--neutral-color);
       opacity: 0;
       visibility: hidden;
       animation: mobileMenuFadeIn 300ms forwards ease-in-out;
