--- a/src/scss/layout/_preloading.scss
+++ b/src/scss/layout/_preloading.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   gap: 4.6875rem;
-  background-color: var(--white-color);
+  background-color: var(--neutral-color);
   height: 100%;
   width: 100%;
   transition: opacity 300ms ease-in-out;
