created form validation

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -62,6 +62,7 @@
 $z-index: (
   'negative': -1,
   'default': 1,
+  'default-alt': 5,
   'header': 10,
   'mobile-menu': 50,
   'preloading-screen': 100
