--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -219,6 +219,31 @@
     &:nth-child(3) {
       margin-bottom: 2.125rem;
     }
+
+    &.error {
+      .contact {
+        &__icon {
+          color: var(--red-color);
+        }
+
+        &__input {
+          border-color: var(--red-color);
+
+          &:focus {
+            border-color: var(--red-color);
+
+            ~ .contact__icon {
+              color: var(--red-color);
+            }
+          }
+        }
+
+        &__error-message {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
   }
 
   &__label {
@@ -264,8 +289,128 @@
     }
   }
 
+  &__error-message {
+    position: absolute;
+    bottom: -1.625rem;
+    font-size: var(--smaller-font-size);
+    color: var(--red-color);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 300ms ease-out;
+  }
+
   &__submit {
     display: flex;
     justify-content: flex-end;
+  }
+}
+
+.alert {
+  position: fixed;
+  right: -350px;
+  bottom: calc(var(--header-height) + 1.25rem);
+  z-index: map-get($z-index, 'default');
+  padding: 1.4375rem 1.375rem 1.4375rem 0.9375rem;
+  background-color: var(--neutral-color);
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.25);
+  @include border-radius('5');
+  transition: background-color 300ms ease-in;
+
+  @include breakpoint('large') {
+    top: calc(var(--header-height) + 1.25rem);
+    bottom: unset;
+  }
+
+  &__icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.125rem;
+    height: 2.125rem;
+    margin-right: 0.8125rem;
+    @include border-radius('5');
+
+    .icon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: var(--white-color);
+      font-size: 0.6875rem;
+      width: 1.375rem;
+      height: 1.375rem;
+      @include border-radius('100');
+    }
+  }
+
+  &__text {
+    margin-right: 1.5rem;
+  }
+
+  &__title {
+    display: block;
+    font: var(--medium-font) var(--normal-font-size) var(--lexend-font-family);
+    color: var(--secondary-color);
+    margin-bottom: 0.125rem;
+  }
+
+  &__message {
+    line-height: initial;
+    color: var(--grayish-blue);
+    font-size: var(--small-font-size-alt);
+    width: 13.6875rem;
+  }
+
+  &__close-icon {
+    font-size: 0.875rem;
+    color: var(--secondary-color);
+    cursor: pointer;
+  }
+
+  &__timeout {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 0.25rem;
+    border-radius: 0 0.625rem 0.625rem 0.625rem;
+  }
+}
+
+/*======== Alert Colors ========*/
+#success-alert {
+  $green-color: hsl(151, 90%, 43%);
+  z-index: map-get($z-index, 'default-alt');
+
+  .alert {
+    &__icon {
+      background-color: var(--green-color-low-opacity);
+
+      .icon {
+        background-color: $green-color;
+      }
+    }
+
+    &__timeout {
+      background-color: $green-color;
+    }
+  }
+}
+
+#failed-alert {
+  .alert {
+    &__icon {
+      background-color: var(--red-color-low-opacity);
+
+      .icon {
+        background-color: var(--red-color);
+        font-size: 0.875rem;
+      }
+    }
+
+    &__timeout {
+      background-color: var(--red-color);
+    }
   }
 }
